--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,3 @@
  {
-  "extends": "standard",
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  }
+  "extends": "standard"
 }
