--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,8 @@
  {
-  "extends": "standard"
+  "extends": "standard",
+  "rules": {
+    "no-undef" : "off",
+    "n/handle-callback-err" : "off",
+    "no-unused-vars" : "off"
+  }
 }
