--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node ./src/app.js",
     "dev": "nodemon ./src/app.js",
-    "lint": "npx eslint ./src"
+    "lint": "npx eslint ./src",
+    "test": "mocha src/test/*.spec.js --exit"
   },
   "dependencies": {
     "axios": "1.3.5",
@@ -17,11 +18,14 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "chai": "4.3.7",
+    "chai-http": "4.3.0",
     "eslint": "8.38.0",
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-n": "15.7.0",
     "eslint-plugin-promise": "6.1.1",
+    "mocha": "10.2.0",
     "nodemon": "2.0.22"
   }
 }
