--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node ./src/app.js",
     "dev": "nodemon ./src/app.js",
     "lint": "npx eslint ./src",
-    "test": "mocha src/test/*.spec.js --exit"
+    "test": "mocha src/test/*.spec.js --exit",
+    "compose": "docker-compose build && docker-compose up"
   },
   "dependencies": {
     "axios": "1.3.5",
